<resources>
    <string name="app_name" translatable="false">Quiz</string>
    <string name="site_address" translatable="false">http://quizator.cba.pl/</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password  is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">My Account</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="retrieve_password">Retrieve Password</string>
    <string name="about_application">About application</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="title_activity_new_account">New Account</string>
    <string name="retype_password">Retype password</string>
    <string name="create_new_account">Create new account</string>
    <string name="password_dont_match">Password don\'t match</string>
    <string name="username">Username</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="email_or_username">Email or Username</string>
    <string name="title_activity_get_question">Get Question</string>
    <string name="ads_banner_main_id" translatable="false">ca-app-pub-9635712631261774/2875827085</string>
    <string name="ads_reward_main_id" translatable="false">ca-app-pub-9635712631261774/7436762896</string>
    <string name="empty">None</string>
    <string name="procent_of_lvl_complete">Procent of lvl complete</string>
    <string name="login">Logged</string>
    <string name="lvl">Level</string>
    <string name="points">Points</string>
    <string name="next_lvl_is">Next level is:</string>
    <string name="need_points">Need points:</string>
    <string name="get_question">Get question</string>
    <string name="log_out">Logout</string>
    <string name="hold_for_answer">Hold for answer</string>
    <string name="show_video">Show video</string>
    <string name="skip_lock">Skip Lock</string>
    <string name="remember_me">Remember me</string>
    <string name="information">information</string>
    <string name="close">close</string>

</resources>
