<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@+id/textView24"
        android:layout_centerHorizontal="true"
        android:foregroundGravity="center_vertical|center"
        android:padding="10dp"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="-2dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressText"
        android:layout_centerHorizontal="true"
        android:text="@string/procent_of_lvl_complete" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/cell_padding"
        android:text="@string/empty"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressText"
        android:layout_centerHorizontal="true"
        android:background="@color/tableColorBackground"
        android:foregroundGravity="center_vertical|center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_margin="1dp"

                android:layout_weight="1"
                android:background="@color/tableColorCell"
                android:padding="@dimen/cell_padding"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:maxLength="26"
                android:padding="@dimen/cell_padding"
                android:text="@string/empty"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/tableColorCell"
                android:padding="@dimen/cell_padding"
                android:text="@string/lvl"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userLvl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="1dp"

                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:maxLength="8"
                android:padding="@dimen/cell_padding"
                android:text="@string/lvl"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="185dp"
                tools:layout_editor_absoluteY="50dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/tableColorCell"
                android:padding="@dimen/cell_padding"
                android:text="@string/points"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:maxLength="8"
                android:padding="@dimen/cell_padding"
                android:text="@string/empty"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="185dp"
                tools:layout_editor_absoluteY="50dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/tableColorBackground"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/next_lvl_is" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:text="@string/need_points" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userNextLvl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_margin="1dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:maxLength="8"
                android:text="@string/lvl"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="185dp"
                tools:layout_editor_absoluteY="50dp" />

            <TextView
                android:id="@+id/userNextPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:maxLength="8"
                android:text="@string/empty"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/fab"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/get_question" />

    <Button
        android:id="@+id/fab2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fab"
        android:layout_alignBottom="@+id/fab"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/skip_lock" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ads_banner_main_id" />

</RelativeLayout>
